# Gateway-Template

./: Cargo.toml  README.md
.cargo/: config.toml
crates/libs/lib-auth/src/: config.rs
crates/libs/lib-auth/src/pwd/: error.rs  mod.rs
crates/libs/lib-auth/src/pwd/scheme/: error.rs  mod.rs  scheme_01.rs  scheme_02.rs
crates/libs/lib-auth/src/token/: error.rs  mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs
crates/libs/lib-core/src/_dev_utils/: mod.rs
crates/libs/lib-core/src/ctx/: error.rs  mod.rs
crates/libs/lib-core/src/model/: error.rs  example.rs  mod.rs  store.rs  user.rs
crates/libs/lib-core/src/model/base/: crud_fns.rs  mod.rs
crates/libs/lib-rpc-core/: Cargo.toml
crates/libs/lib-rpc-core/src/: error.rs  lib.rs  rpc_params.rs
crates/libs/lib-rpc-core/src/utils/: macro_utils.rs
crates/libs/lib-utils/src/: b64.rs  envs.rs  time.rs
crates/libs/lib-web/src/: error.rs
crates/libs/lib-web/src/handlers/: handlers_login.rs  handlers_rpc.rs
crates/libs/lib-web/src/log/: mod.rs
crates/libs/lib-web/src/middleware/: mw_auth.rs  mw_req_stamp.rs  mw_res_map.rs
crates/libs/lib-web/src/routes/: routes_static.rs
crates/libs/lib-web/src/utils/: token.rs
crates/libs/proc-mac/: Cargo.toml  LICENSE
crates/libs/proc-mac/src/: lib.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: quick_dev.rs
crates/services/web-server/src/: config.rs  error.rs  main.rs
crates/services/web-server/src/web/: routes_login.rs  routes_rpc.rs
crates/services/web-server/src/web/rpcs/: example_rpc.rs  mod.rs
